--- a/wp-content/themes/Paradox/assets/scss/partials/_modules.scss
+++ b/wp-content/themes/Paradox/assets/scss/partials/_modules.scss
@@ -337,8 +337,8 @@ color: #ffffff!important;
     // border-bottom: 1px solid $hr-border;
     padding-bottom: 10px;
     margin-bottom: 18px;
-    background-color: darken($brand-primary, 10%);
-    z-index: 5555;
+    background-color: purple;
+    z-index: 0;
     .phone a {
         margin-top: 15px;
         font-size: 17px;
