--- a/wp-content/themes/Paradox/style.css
+++ b/wp-content/themes/Paradox/style.css
@@ -10466,8 +10466,8 @@ a.btn i.fa, a.gform_button i.fa, .archive a.page-title i.fa, a.more-link i.fa {
 .mobile-landing {
   padding-bottom: 10px;
   margin-bottom: 18px;
-  background-color: #20638f;
-  z-index: 5555;
+  background-color: purple;
+  z-index: 0;
 }
 /* line 342, ../scss/partials/_modules.scss */
 .mobile-landing .phone a {
